@@ -4,7 +4,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-package org.gridsuite.study.server;
+package org.gridsuite.study.server.rootnetworks;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -12,6 +12,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.powsybl.network.store.client.NetworkStoreService;
+import org.gridsuite.study.server.ContextConfigurationWithTestChannel;
+import org.gridsuite.study.server.StudyException;
 import org.gridsuite.study.server.dto.*;
 import org.gridsuite.study.server.dto.caseimport.CaseImportAction;
 import org.gridsuite.study.server.dto.caseimport.CaseImportReceiver;
@@ -21,8 +23,8 @@ import org.gridsuite.study.server.networkmodificationtree.dto.NetworkModificatio
 import org.gridsuite.study.server.networkmodificationtree.entities.NodeEntity;
 import org.gridsuite.study.server.repository.StudyEntity;
 import org.gridsuite.study.server.repository.StudyRepository;
-import org.gridsuite.study.server.repository.rootnetwork.RootNetworkCreationRequestEntity;
-import org.gridsuite.study.server.repository.rootnetwork.RootNetworkCreationRequestRepository;
+import org.gridsuite.study.server.repository.rootnetwork.RootNetworkRequestEntity;
+import org.gridsuite.study.server.repository.rootnetwork.RootNetworkRequestRepository;
 import org.gridsuite.study.server.repository.rootnetwork.RootNetworkEntity;
 import org.gridsuite.study.server.repository.rootnetwork.RootNetworkRepository;
 import org.gridsuite.study.server.service.*;
@@ -52,8 +54,7 @@ import java.util.UUID;
 import java.util.function.Consumer;
 
 import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.wireMockConfig;
-import static org.gridsuite.study.server.StudyConstants.HEADER_IMPORT_PARAMETERS;
-import static org.gridsuite.study.server.StudyConstants.HEADER_RECEIVER;
+import static org.gridsuite.study.server.StudyConstants.*;
 import static org.gridsuite.study.server.utils.TestUtils.createModificationNodeInfo;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
@@ -130,7 +131,7 @@ class RootNetworkTest {
     @Autowired
     private RootNetworkService rootNetworkService;
     @Autowired
-    private RootNetworkCreationRequestRepository rootNetworkCreationRequestRepository;
+    private RootNetworkRequestRepository rootNetworkRequestRepository;
     @Autowired
     private RootNetworkNodeInfoService rootNetworkNodeInfoService;
     @Autowired
@@ -197,14 +198,14 @@ class RootNetworkTest {
             .willReturn(WireMock.ok())).getId();
         Mockito.doReturn(DUPLICATE_CASE_UUID).when(caseService).duplicateCase(caseUuid, true);
 
-        // request execution - returns RootNetworkCreationRequestInfos
-        String response = mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName2")
+        // request execution - returns RootNetworkRequestInfos
+        String response = mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName2", "rn2")
                 .header("userId", USER_ID)
                 .header("content-type", "application/json")
                 .content(objectMapper.writeValueAsString(importParameters)))
             .andExpect(status().isOk())
             .andReturn().getResponse().getContentAsString();
-        RootNetworkCreationRequestInfos result = objectMapper.readValue(response, RootNetworkCreationRequestInfos.class);
+        RootNetworkRequestInfos result = objectMapper.readValue(response, RootNetworkRequestInfos.class);
 
         wireMockUtils.verifyPostRequest(stubId, "/v1/networks",
             false,
@@ -217,7 +218,7 @@ class RootNetworkTest {
         // check result values and check it has been saved in database
         assertEquals(USER_ID, result.getUserId());
         assertEquals(studyEntity.getId(), result.getStudyUuid());
-        assertNotNull(rootNetworkCreationRequestRepository.findById(result.getId()));
+        assertNotNull(rootNetworkRequestRepository.findById(result.getId()));
     }
 
     @Test
@@ -225,12 +226,12 @@ class RootNetworkTest {
         UUID caseUuid = UUID.randomUUID();
         String caseFormat = "newCaseFormat";
 
-        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}", UUID.randomUUID(), caseUuid, caseFormat, "rootNetworkName")
+        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", UUID.randomUUID(), caseUuid, caseFormat, "rootNetworkName", "rn1")
                 .header("userId", "userId"))
             .andExpect(status().isNotFound());
 
-        // check no rootNetworkCreationRequest has been saved
-        assertEquals(0, rootNetworkCreationRequestRepository.count());
+        // check no rootNetworkRequest has been saved
+        assertEquals(0, rootNetworkRequestRepository.count());
     }
 
     @Test
@@ -246,8 +247,8 @@ class RootNetworkTest {
             .willReturn(WireMock.serverError().withBody("Error when creating root network"))).getId();
         Mockito.doReturn(DUPLICATE_CASE_UUID).when(caseService).duplicateCase(caseUuid, true);
 
-        // request execution - returns RootNetworkCreationRequestInfos
-        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName2")
+        // request execution - returns RootNetworkRequestInfos
+        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName2", "rn2")
                 .header("userId", USER_ID)
                 .header("content-type", "application/json"))
             .andExpect(status().isInternalServerError());
@@ -261,8 +262,8 @@ class RootNetworkTest {
         );
 
         Mockito.verify(caseService, Mockito.times(1)).duplicateCase(caseUuid, true);
-        // check no rootNetworkCreationRequest has been saved
-        assertEquals(0, rootNetworkCreationRequestRepository.count());
+        // check no rootNetworkRequest has been saved
+        assertEquals(0, rootNetworkRequestRepository.count());
     }
 
     @Test
@@ -275,50 +276,87 @@ class RootNetworkTest {
         studyRepository.save(studyEntity);
 
         // insert a creation request for the same study entity
-        rootNetworkCreationRequestRepository.save(RootNetworkCreationRequestEntity.builder()
-                .id(UUID.randomUUID())
-                .name("rootNetworkName")
-                .studyUuid(studyEntity.getId())
-                .userId(USER_ID)
-            .build());
+        rootNetworkService.insertCreationRequest(UUID.randomUUID(), studyEntity.getId(), "rootNetworkName", "rn1", USER_ID);
 
         // request execution - fails since there is already too many root networks + root network creation requests for this study
         UUID caseUuid = UUID.randomUUID();
         String caseFormat = "newCaseFormat";
-        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName")
+        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName", "rn1")
                 .header("userId", USER_ID)
                 .header("content-type", "application/json"))
             .andExpect(status().isForbidden());
 
-        assertEquals(1, rootNetworkCreationRequestRepository.countAllByStudyUuid(studyEntity.getId()));
+        assertEquals(1, rootNetworkRequestRepository.countAllByStudyUuid(studyEntity.getId()));
         assertEquals(2, rootNetworkRepository.countAllByStudyId(studyEntity.getId()));
     }
 
     @Test
-    void testCreateRootNeworkWithExistingName() throws Exception {
+    void testCreateRootNetworkWithExistingName() throws Exception {
         // create study with first root network - first root network will have the name "rootNetworkName"
         StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
         studyRepository.save(studyEntity);
 
+        // test name existence
+        mockMvc.perform(head("/v1/studies/{studyUuid}/root-networks?name={rootNetworkName}", studyEntity.getId(), "rootNetworkName")
+                .header("userId", USER_ID))
+            .andExpect(status().isOk());
+
         // execute request to create root network with name "rootNetworkName" - should fail since this name already exists within the same study
         UUID caseUuid = UUID.randomUUID();
         String caseFormat = "newCaseFormat";
-        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName")
+        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkName", "rn1")
                 .header("userId", USER_ID)
                 .header("content-type", "application/json"))
             .andExpect(status().isForbidden());
+
+        // test name non existence
+        mockMvc.perform(head("/v1/studies/{studyUuid}/root-networks?name={rootNetworkName}", studyEntity.getId(), "rootNetworkNameNotExist")
+                .header("userId", USER_ID))
+            .andExpect(status().isNoContent());
+    }
+
+    @Test
+    void testCreateRootNetworkWithForbiddenTag() throws Exception {
+        // create study with first root network - first root network will have the tag "dum"
+        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        studyRepository.save(studyEntity);
+
+        // test tag existence
+        mockMvc.perform(head("/v1/studies/{studyUuid}/root-networks?tag={rootNetworkTag}", studyEntity.getId(), "dum")
+                .header("userId", USER_ID))
+            .andExpect(status().isOk());
+
+        // execute request to create root network with tag "dum" - should fail since this tag already exists within the same study
+        UUID caseUuid = UUID.randomUUID();
+        String caseFormat = "newCaseFormat";
+        String tag = "dum"; // dummy Study default tag
+        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkNewName", tag)
+                .header("userId", USER_ID)
+                .header("content-type", "application/json"))
+            .andExpect(status().isForbidden());
+        tag = "thisisatagName"; // forbidden size tag
+        mockMvc.perform(post("/v1/studies/{studyUuid}/root-networks?caseUuid={caseUuid}&caseFormat={caseFormat}&name={rootNetworkName}&tag={rootNetworkTag}", studyEntity.getId(), caseUuid, caseFormat, "rootNetworkNewName", tag)
+            .header("userId", USER_ID)
+            .header("content-type", "application/json"))
+            .andExpect(status().isForbidden());
+
+        // test tag non existence
+        mockMvc.perform(head("/v1/studies/{studyUuid}/root-networks?tag={rootNetworkTag}", studyEntity.getId(), "xxxx")
+                .header("userId", USER_ID))
+            .andExpect(status().isNoContent());
     }
 
     @Test
     void testCreateRootNetworkConsumer() throws Exception {
         // create study with first root network
         StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        UUID studyUuid = studyEntity.getId();
         studyRepository.save(studyEntity);
 
         UUID newRootNetworkUuid = UUID.randomUUID();
 
         // insert creation request as it should be when receiving a caseImportSucceeded with a rootNetworkUuid set
-        rootNetworkCreationRequestRepository.save(RootNetworkCreationRequestEntity.builder().id(newRootNetworkUuid).name(CASE_NAME2).studyUuid(studyEntity.getId()).userId(USER_ID).build());
+        rootNetworkService.insertCreationRequest(newRootNetworkUuid, studyUuid, "CASE_NAME2", "rn2", USER_ID);
 
         // prepare all headers that will be sent to consumer supposed to receive "caseImportSucceeded" message
         Consumer<Message<String>> messageConsumer = consumerService.consumeCaseImportSucceeded();
@@ -344,13 +382,41 @@ class RootNetworkTest {
         assertEquals(CASE_NAME2, rootNetworkEntity.getCaseName());
         assertEquals(CASE_UUID2, rootNetworkEntity.getCaseUuid());
         assertEquals(REPORT_UUID2, rootNetworkEntity.getReportUuid());
+        assertEquals("rn2", rootNetworkEntity.getTag());
         assertEquals(importParameters, rootNetworkService.getImportParameters(newRootNetworkUuid));
 
-        // corresponding rootNetworkCreationRequestRepository should be emptied when root network creation is done
-        assertFalse(rootNetworkCreationRequestRepository.existsById(newRootNetworkUuid));
+        // corresponding rootNetworkRequestRepository should be emptied when root network creation is done
+        assertFalse(rootNetworkRequestRepository.existsById(newRootNetworkUuid));
 
         // check case expiration has been disabled
         Mockito.verify(caseService, Mockito.times(1)).disableCaseExpiration(CASE_UUID2);
+    }
+
+    @Test
+    void testCreateRootNetworkCaseImportFailure() throws Exception {
+        // create study with first root network
+        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        studyRepository.save(studyEntity);
+
+        UUID newRootNetworkUuid = UUID.randomUUID();
+
+        // insert creation request as it should be when receiving a caseImportFailed with a rootNetworkUuid set
+        rootNetworkRequestRepository.save(RootNetworkRequestEntity.builder().id(newRootNetworkUuid).name(CASE_NAME2).tag("rn2").studyUuid(studyEntity.getId()).userId(USER_ID).build());
+
+        // prepare all headers that will be sent to consumer supposed to receive "caseImportFailed" message
+        Consumer<Message<String>> messageConsumer = consumerService.consumeCaseImportFailed();
+        CaseImportReceiver caseImportReceiver = new CaseImportReceiver(studyEntity.getId(), newRootNetworkUuid, CASE_UUID2, REPORT_UUID2, USER_ID, 0L, CaseImportAction.ROOT_NETWORK_CREATION);
+        Map<String, Object> headers = createConsumeCaseImportFailedHeaders(caseImportReceiver);
+
+        // send message to consumer
+        messageConsumer.accept(new GenericMessage<>("", headers));
+
+        // get study from database and check that root network creation request has been created and deleted after case import failure
+        StudyEntity updatedStudyEntity = studyRepository.findWithRootNetworksById(studyEntity.getId()).orElse(null);
+        assertEquals(1, updatedStudyEntity.getRootNetworks().size());
+
+        // corresponding rootNetworkRequestRepository should be emptied when root network creation is failed
+        assertFalse(rootNetworkRequestRepository.existsById(newRootNetworkUuid));
     }
 
     @Test
@@ -379,8 +445,8 @@ class RootNetworkTest {
         StudyEntity updatedStudyEntity = studyRepository.findWithRootNetworksById(studyEntity.getId()).orElseThrow(() -> new StudyException(StudyException.Type.STUDY_NOT_FOUND));
         assertEquals(1, updatedStudyEntity.getRootNetworks().size());
 
-        // corresponding rootNetworkCreationRequestRepository should be emptied when root network creation is done
-        assertFalse(rootNetworkCreationRequestRepository.existsById(newRootNetworkUuid));
+        // corresponding rootNetworkRequestRepository should be emptied when root network creation is done
+        assertFalse(rootNetworkRequestRepository.existsById(newRootNetworkUuid));
 
         // assert distant resources deletions have been called
         Mockito.verify(caseService, Mockito.times(1)).disableCaseExpiration(CASE_UUID2);
@@ -403,6 +469,7 @@ class RootNetworkTest {
             .caseInfos(new CaseInfos(CASE_UUID2, CASE_NAME2, CASE_FORMAT2))
             .networkInfos(new NetworkInfos(NETWORK_UUID2, NETWORK_ID2))
             .reportUuid(REPORT_UUID2)
+            .tag("dum")
             .build());
         studyRepository.save(studyEntity);
 
@@ -444,7 +511,7 @@ class RootNetworkTest {
         // after deletion, check we have only 1 root network for study
         List<BasicRootNetworkInfos> rootNetworkListAfterDeletion = studyService.getExistingBasicRootNetworkInfos(studyEntity.getId());
         assertEquals(1, rootNetworkListAfterDeletion.size());
-        assertEquals(firstRootNetworkUuid, rootNetworkListAfterDeletion.get(0).rootNetworkUuid());
+        assertEquals(firstRootNetworkUuid, rootNetworkListAfterDeletion.getFirst().rootNetworkUuid());
 
         // check deletion of 1st link remote infos
         Mockito.verify(reportService, Mockito.times(1)).deleteReports(List.of(REPORT_UUID2));
@@ -479,11 +546,12 @@ class RootNetworkTest {
             .caseInfos(new CaseInfos(CASE_UUID2, CASE_NAME2, CASE_FORMAT2))
             .networkInfos(new NetworkInfos(NETWORK_UUID2, NETWORK_ID2))
             .reportUuid(REPORT_UUID2)
+            .tag("dum")
             .build());
         studyRepository.save(studyEntity);
 
         networkModificationTreeService.createRoot(studyEntity);
-        UUID firstRootNetworkUuid = studyService.getExistingBasicRootNetworkInfos(studyEntity.getId()).get(0).rootNetworkUuid();
+        UUID firstRootNetworkUuid = studyService.getExistingBasicRootNetworkInfos(studyEntity.getId()).getFirst().rootNetworkUuid();
 
         // try to delete all root networks
         mockMvc.perform(delete("/v1/studies/{studyUuid}/root-networks", studyEntity.getId())
@@ -505,34 +573,110 @@ class RootNetworkTest {
     }
 
     @Test
+    void testUpdateRootNetworkNameAndTag() throws Exception {
+        // create study with
+        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        studyRepository.save(studyEntity);
+
+        final UUID rootNetworkUuid = studyEntity.getFirstRootNetwork().getId();
+        final String newRootNetworkName = "newRootNetworkName";
+        final String newRootNetworkTag = "newT";
+
+        mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}",
+                studyEntity.getId(), rootNetworkUuid)
+                .contentType(APPLICATION_JSON)
+                .param("name", newRootNetworkName)
+                .param("tag", newRootNetworkTag)
+                .header("userId", USER_ID)
+        ).andExpect(status().isOk());
+
+        RootNetworkEntity updatedRootNetwork = rootNetworkService.getRootNetwork(rootNetworkUuid).orElse(null);
+        assertNotNull(updatedRootNetwork);
+        assertEquals(newRootNetworkName, updatedRootNetwork.getName());
+        assertEquals(newRootNetworkTag, updatedRootNetwork.getTag());
+
+    }
+
+    @Test
+    void testUpdateOnlyRootNetworkTag() throws Exception {
+        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        studyRepository.save(studyEntity);
+        RootNetworkEntity firstRootNetwork = studyEntity.getFirstRootNetwork();
+        final UUID rootNetworkUuid = firstRootNetwork.getId();
+        final String newRootNetworkTag = "tag1";
+
+        mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}",
+                studyEntity.getId(), rootNetworkUuid)
+                .contentType(APPLICATION_JSON)
+                .param("tag", newRootNetworkTag)
+                .header("userId", USER_ID)
+        ).andExpect(status().isOk());
+
+        RootNetworkEntity updatedRootNetwork = rootNetworkService.getRootNetwork(rootNetworkUuid).orElse(null);
+        assertNotNull(updatedRootNetwork);
+        assertEquals(newRootNetworkTag, updatedRootNetwork.getTag());
+        assertEquals(firstRootNetwork.getName(), updatedRootNetwork.getName());
+    }
+
+    @Test
+    void testUpdateOnlyRootNetworkName() throws Exception {
+        // create study with
+        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        studyRepository.save(studyEntity);
+        RootNetworkEntity firstRootNetwork = studyEntity.getFirstRootNetwork();
+        final UUID rootNetworkUuid = firstRootNetwork.getId();
+        final String newRootNetworkNameToUpdate = "nameToUpdate";
+
+        mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}",
+                studyEntity.getId(), rootNetworkUuid)
+                .contentType(APPLICATION_JSON)
+                .param("name", newRootNetworkNameToUpdate)
+                .header("userId", USER_ID)
+        ).andExpect(status().isOk());
+
+        RootNetworkEntity updatedRootNetwork = rootNetworkService.getRootNetwork(rootNetworkUuid).orElse(null);
+        assertNotNull(updatedRootNetwork);
+        assertEquals(newRootNetworkNameToUpdate, updatedRootNetwork.getName());
+        assertEquals(firstRootNetwork.getTag(), updatedRootNetwork.getTag());
+    }
+
+    @Test
     void testUpdateRootNetworkCase() throws Exception {
-        final UUID studyUuid = UUID.randomUUID();
+        // create study with first root network
+        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        studyRepository.save(studyEntity);
+
         final UUID rootNetworkUuid = UUID.randomUUID();
         final UUID caseUuid = UUID.randomUUID();
         final String caseFormat = "newCaseFormat";
+        final String newRootNetworkName = "newRootNetworkName";
+        final String newRootNetworkTag = "newT";
         Map<String, Object> importParameters = new HashMap<>();
         importParameters.put("param1", "newValue1");
         importParameters.put("param2", "newValue2");
 
         UUID stubId = wireMockServer.stubFor(WireMock.post(WireMock.urlPathEqualTo("/v1/networks"))
-            .willReturn(WireMock.ok())).getId();
+                .willReturn(WireMock.ok())).getId();
+        Mockito.doReturn(DUPLICATE_CASE_UUID).when(caseService).duplicateCase(caseUuid, true);
 
         mockMvc.perform(put("/v1/studies/{studyUuid}/root-networks/{rootNetworkUuid}",
-            studyUuid, rootNetworkUuid)
-            .contentType(APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(importParameters))
-            .param("caseUuid", caseUuid.toString())
-            .param("caseFormat", caseFormat)
-            .header("userId", USER_ID)
+                studyEntity.getId(), rootNetworkUuid)
+                .contentType(APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(importParameters))
+                .param("caseUuid", caseUuid.toString())
+                .param("caseFormat", caseFormat)
+                .param("name", newRootNetworkName)
+                .param("tag", newRootNetworkTag)
+                .header("userId", USER_ID)
         ).andExpect(status().isOk());
 
         wireMockUtils.verifyPostRequest(stubId, "/v1/networks",
-            false,
-            Map.of(
-                "caseUuid", WireMock.equalTo(caseUuid.toString()),
-                "caseFormat", WireMock.equalTo(caseFormat)
-            ),
-            objectMapper.writeValueAsString(importParameters)
+                false,
+                Map.of(
+                        "caseUuid", WireMock.equalTo(DUPLICATE_CASE_UUID.toString()),
+                        "caseFormat", WireMock.equalTo(caseFormat)
+                ),
+                objectMapper.writeValueAsString(importParameters)
         );
     }
 
@@ -583,6 +727,7 @@ class RootNetworkTest {
 
         RootNetworkEntity rootNetworkEntity = updatedStudyEntity.getRootNetworks().stream().filter(rne -> rne.getId().equals(rootNetworkUuid)).findFirst().orElseThrow(() -> new StudyException(StudyException.Type.ROOT_NETWORK_NOT_FOUND));
         assertEquals(rootNetworkUuid, rootNetworkEntity.getId());
+        assertEquals("dum", rootNetworkEntity.getTag());
         assertEquals(NEW_NETWORK_UUID, rootNetworkEntity.getNetworkUuid());
         assertEquals(NEW_NETWORK_ID, rootNetworkEntity.getNetworkId());
         assertEquals(NEW_CASE_FORMAT, rootNetworkEntity.getCaseFormat());
@@ -611,12 +756,13 @@ class RootNetworkTest {
             .networkInfos(new NetworkInfos(NETWORK_UUID2, NETWORK_ID2))
             .reportUuid(REPORT_UUID2)
             .id(rootNetworkUuid)
+            .tag("dum")
             .build());
         studyRepository.save(studyEntity);
 
         // create a request of root network creation
         UUID requestUuid = UUID.randomUUID();
-        rootNetworkCreationRequestRepository.save(new RootNetworkCreationRequestEntity(requestUuid, "rootNetworkName2", studyEntity.getId(), USER_ID));
+        rootNetworkService.insertCreationRequest(requestUuid, studyEntity.getId(), "rootNetworkName2", "R_01", USER_ID);
 
         String response = mockMvc.perform(get("/v1/studies/{studyUuid}/root-networks", studyEntity.getId()))
             .andExpect(status().isOk())
@@ -676,13 +822,14 @@ class RootNetworkTest {
 
         // create new root network
         UUID rootNetworkUuid = UUID.randomUUID();
-        rootNetworkService.insertCreationRequest(rootNetworkUuid, studyEntity, "dummyRootNetwork3", USER_ID);
+        rootNetworkService.insertCreationRequest(rootNetworkUuid, studyEntity.getId(), "dummyRootNetwork3", "RN_3", USER_ID);
         studyService.createRootNetwork(studyEntity.getId(), RootNetworkInfos.builder()
             .name(CASE_NAME2)
             .caseInfos(new CaseInfos(CASE_UUID2, CASE_NAME2, CASE_FORMAT2))
             .networkInfos(new NetworkInfos(NETWORK_UUID2, NETWORK_ID2))
             .reportUuid(REPORT_UUID2)
             .id(rootNetworkUuid)
+            .tag("dum")
             .build());
 
         // check "dummyRootNetwork3" root network order have been created correctly
@@ -704,6 +851,13 @@ class RootNetworkTest {
         return headers;
     }
 
+    private Map<String, Object> createConsumeCaseImportFailedHeaders(CaseImportReceiver caseImportReceiver) throws JsonProcessingException {
+        Map<String, Object> headers = new HashMap<>();
+        headers.put(HEADER_ERROR, "FAILED TO IMPORT CASE");
+        headers.put(HEADER_RECEIVER, objectMapper.writeValueAsString(caseImportReceiver));
+        return headers;
+    }
+
     private void createDummyRootNetwork(StudyEntity studyEntity, RootNetworkInfos rootNetworkInfos) {
         studyEntity.addRootNetwork(rootNetworkInfos.toEntity());
     }
@@ -715,6 +869,7 @@ class RootNetworkTest {
             .caseInfos(new CaseInfos(UUID.randomUUID(), "caseName", "caseFormat"))
             .networkInfos(new NetworkInfos(UUID.randomUUID(), UUID.randomUUID().toString()))
             .reportUuid(UUID.randomUUID())
+            .tag("dum")
             .build().toEntity();
         studyEntity.addRootNetwork(rootNetworkEntity);
     }
@@ -722,7 +877,7 @@ class RootNetworkTest {
     @AfterEach
     void tearDown() {
         TestUtils.assertWiremockServerRequestsEmptyThenShutdown(wireMockServer);
-        rootNetworkCreationRequestRepository.deleteAll();
+        rootNetworkRequestRepository.deleteAll();
         rootNetworkRepository.deleteAll();
     }
 }
